--- a/productsprint/main.css
+++ b/productsprint/main.css
@@ -8,6 +8,7 @@ body {
   font-family: "Poppins", sans-serif;
   letter-spacing: 0.02em;
   background-color: #fff;
+  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 768px) {
@@ -57,6 +58,8 @@ body {
 .pmc-text {
   margin-left: 8px;
   margin-top: 3px;
+  white-space: nowrap;
+  overflow: hidden;
   font-size: 1.1em;
   font-weight: 600;
   color: #fff;
@@ -130,6 +133,8 @@ body {
 
 .hero-content {
   padding-top: 150px;
+  margin-left: 24px;
+  margin-right: 24px;
 }
 
 .hero-content h2 {
@@ -355,7 +360,6 @@ body {
 
 @media only screen and (max-width: 1500px) {
   .float-image {
-    opacity: 10%;
     z-index: -1;
   }
   .float-image img {
@@ -364,10 +368,8 @@ body {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1200px) {
   .float-image {
-    -webkit-transform: translateY(120px);
-            transform: translateY(120px);
     display: none;
   }
 }
