--- a/productsprint/main.scss
+++ b/productsprint/main.scss
@@ -37,6 +37,7 @@ body {
   @media only screen and (max-width: 768px) {
     font-size: 0.95em;
   }
+  overflow-x: hidden;
 }
 
 ///////////////////
@@ -75,6 +76,9 @@ body {
 .pmc-text {
   margin-left: 8px;
   margin-top: 3px;
+
+  white-space: nowrap;
+  overflow: hidden;
 
   font-size: 1.1em;
   font-weight: 600;
@@ -179,6 +183,8 @@ body {
 
 .hero-content {
   padding-top: 150px;
+  margin-left: 24px;
+  margin-right: 24px;
 
   h2 {
     margin-top: 60px;
@@ -399,7 +405,7 @@ body {
   }
 
   @media only screen and (max-width: 1500px) {
-    opacity: 10%;
+    // opacity: 10%;
     z-index: -1;
     // margin-left: 0 !important;
     // margin-right: 40px !important;
@@ -408,8 +414,8 @@ body {
       transform: scale(70%);
     }
   }
-  @media only screen and (max-width: 768px) {
-    transform: translateY(120px);
+  @media only screen and (max-width: 1200px) {
+    // transform: translateY(120px);
     display: none;
   }
 }
