--- a/productsprint/main.scss
+++ b/productsprint/main.scss
@@ -215,6 +215,7 @@ body {
 }
 
 .logo {
+  width: 575px;
   // animation: 1s ease-out 0s 1 slideInFromLeft;
   // animation-timing-function: cubic-bezier(1, 0.165, 0.82, 0.075);
   // filter: drop-shadow(0px 0px 100px #cd314d70);
