created navbar for website

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
-body {
+* {
   padding: 0;
   margin: 0;
-  background-color: #4a6582;
+  background-color: #262936;
   font-family: Poppins, sans-serif;
+  color: white;
+  text-decoration: none;
 }
