added second container box for programs page

--- a/src/components/program/program.css
+++ b/src/components/program/program.css
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
+  padding-bottom: 40px;
 }
 
 .text_container {
@@ -17,6 +18,11 @@
 }
 
 .membership_photo {
+  width: 500px;
+  display: inline-block;
+}
+
+.fellowship_photo {
   width: 500px;
   display: inline-block;
 }
