--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,6 +1,8 @@
 .about_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .about_text {
   text-align: center;
