--- a/src/components/highlights/highlights.css
+++ b/src/components/highlights/highlights.css
@@ -1,3 +1,19 @@
-.highlights_container {
-  left: 0%;
+.achievements > p {
+  width: 200px;
+}
+
+.achievements {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.achievement_statistics {
+  color: #fd2a36;
+  font-weight: 600;
+}
+
+.learn_more_link {
+  color: #80bdff;
 }
