--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,6 +1,7 @@
 .about_container {
   display: flex;
   flex-direction: column;
+
   align-items: center;
   justify-content: center;
 }
@@ -14,4 +15,12 @@
 
 .about_img {
   width: 600px;
+}
+
+.information_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding-bottom: 40px;
 }
