--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -38,3 +38,31 @@ header {
   display: flex;
   gap: 10px;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown_content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  border-radius: 8px;
+}
+
+.header_text {
+  cursor: pointer;
+}
+
+.dropdown:hover .dropdown_content {
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdown_img {
+  width: 10px;
+}
