--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -15,3 +15,12 @@ img.hero_img {
   width: 55%;
   display: inline-block;
 }
+
+.scroll_down {
+  margin-top: 10vh;
+}
+
+.scroll_down_img {
+  margin-top: 2vh;
+  height: 30px;
+}
