fixed design for hero component

--- a/src/components/shared/button.css
+++ b/src/components/shared/button.css
@@ -1,5 +1,5 @@
 .btn_container {
-  margin: 20px 0px 0px;
+  margin: 40px 0px 0px;
 }
 
 .btn {
@@ -8,8 +8,9 @@
   border: 0;
   border-radius: 20px;
   cursor: pointer;
-  padding: 0px 7px 0px 7px;
+  padding: 0px 15px 0px 15px;
   font-weight: 700;
+  font-size: medium;
 }
 
 .primary {
