--- a/src/components/shared/button.css
+++ b/src/components/shared/button.css
@@ -1,5 +1,5 @@
 .btn_container {
-  margin: 40px 0px 0px;
+  /* margin: 40px 0px 0px; */
 }
 
 .btn {
@@ -8,7 +8,7 @@
   border: 0;
   border-radius: 20px;
   cursor: pointer;
-  padding: 0px 15px 0px 15px;
+  padding: 0px 20px 0px 20px;
   font-weight: 700;
   font-size: medium;
 }
@@ -20,4 +20,9 @@
 .secondary {
   border: 2px solid #fd2a36;
   color: #fd2a36;
+}
+
+.header_btn {
+  background-color: #ffffff;
+  color: #15151d;
 }
