--- a/src/components/shared/button.css
+++ b/src/components/shared/button.css
@@ -22,3 +22,20 @@
   background-color: #ffffff;
   color: #15151d;
 }
+
+.header_btn:hover {
+  background-color: #fd2a36;
+  color: #ffffff;
+  transition: all 0.3s ease 0s;
+  box-shadow: 0 0 5px #fd5f68;
+}
+
+.primary:hover {
+  transition: all 0.3s ease 0s;
+  box-shadow: 0 0 10px #fd5f68;
+}
+
+.secondary:hover {
+  transition: all 0.3s ease 0s;
+  box-shadow: 0 0 10px #fd5f68;
+}
