--- a/src/components/highlights/highlights.css
+++ b/src/components/highlights/highlights.css
@@ -15,7 +15,8 @@
 
 .achievement_statistics {
   color: #fd2a36;
-  font-weight: 600;
+  font-weight: 700;
+  font-size: larger;
 }
 
 .learn_more_link {
