--- a/src/components/shared/button.css
+++ b/src/components/shared/button.css
@@ -39,3 +39,10 @@
   transition: all 0.3s ease 0s;
   box-shadow: 0 0 10px #fd5f68;
 }
+
+@media screen and (max-width: 967px) {
+  .btn {
+    font-size: smaller;
+    height: 30px;
+  }
+}
