--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,9 @@
   min-height: 40vh;
   padding: 40px 100px;
 }
+
+@media screen and (max-width: 967px) {
+  .container {
+    padding: 0px 40px;
+  }
+}
