--- a/src/components/program/program.css
+++ b/src/components/program/program.css
@@ -1,6 +1,7 @@
 .program_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .text_container {
@@ -10,12 +11,12 @@
 }
 
 .membership_photo {
-  width: 500px;
+  width: 50%;
   display: inline-block;
 }
 
 .fellowship_photo {
-  width: 500px;
+  width: 50%;
   display: inline-block;
 }
 
