--- a/src/components/highlights/highlights.css
+++ b/src/components/highlights/highlights.css
@@ -36,11 +36,11 @@
 }
 
 .company_logos > img {
-  width: 20%;
+  max-width: 23%;
   cursor: pointer;
 }
 
-@media screen and (max-width: 967px) {
+@media screen and (max-width: 1060px) {
   .achievements p {
     font-weight: 400;
     font-size: smaller;
@@ -54,5 +54,26 @@
   .highlights_text {
     font-weight: 400;
     font-size: smaller;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .company_logos img {
+    width: 20%;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .company_logos img {
+    width: 25%;
+  }
+  .company_logos {
+    gap: 10px;
+  }
+
+  .achievements {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
   }
 }
