--- a/src/components/program/program.css
+++ b/src/components/program/program.css
@@ -24,9 +24,54 @@
   padding-top: 6vh;
 }
 
-@media screen and (max-width: 967px) {
+.information_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding-bottom: 40px;
+}
+
+@media screen and (max-width: 1060px) {
   .program_text {
     font-size: smaller;
     font-weight: 400;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .program_container {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+  }
+
+  .information_container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-bottom: 40px;
+  }
+
+  p.text_container {
+    font-size: smaller;
+    font-weight: 400;
+  }
+
+  .text_container {
+    width: 100%;
+  }
+
+  .membership_photo {
+    width: 100%;
+  }
+
+  .fellowship_photo {
+    margin-top: 30px;
+    width: 100%;
+  }
+
+  .subtitle {
+    font-size: 20px;
   }
 }
