--- a/src/components/fellowship/fellowship.css
+++ b/src/components/fellowship/fellowship.css
@@ -9,6 +9,7 @@
 
 .fellowship_text {
   width: 90%;
+  font-size: medium;
 }
 
 .information_container {
@@ -17,7 +18,7 @@
 }
 
 .fellowship_title {
-  font-size: 45px;
+  font-size: 30px;
   font-weight: 600;
   padding-bottom: 10%;
 }
@@ -51,4 +52,39 @@
 
 .perks_container * {
   background-color: #1a1d2c;
+}
+
+@media screen and (max-width: 970px) {
+  .perks_container {
+    padding: 0px 40px;
+  }
+  .perks_text {
+    font-size: smaller;
+  }
+
+  .perks_display {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    justify-items: center;
+  }
+
+  .perks_display_subcontainer {
+    width: 200px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  img.fellowship_vector {
+    display: none;
+  }
+
+  .perks_display {
+    justify-items: left;
+  }
+
+  .perks_display_subcontainer {
+    align-items: flex-start;
+    text-align: left;
+  }
 }
