--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -8,7 +8,7 @@
 .hero_text {
   display: inline-block;
   margin-right: auto;
-  margin-top: 14vh;
+  margin-top: 0;
 }
 
 img.hero_img {
@@ -47,7 +47,7 @@ img.hero_img {
 
 @media screen and (max-width: 755px) {
   .hero_title {
-    font-size: 45px;
+    font-size: 42px;
   }
 
   .hero_container {
