--- a/src/components/fellowship/fellowship.css
+++ b/src/components/fellowship/fellowship.css
@@ -2,17 +2,23 @@
   color: white;
 }
 
+p.title {
+  padding-top: 40px;
+  font-size: 1.1em;
+}
+
 .fellowship_vector {
-  width: 55%;
+  width: 60%;
   margin-right: 10px;
 }
 
 .fellowship_text_container {
   margin-left: auto;
+  width: 80%;
 }
 
 .fellowship_text {
-  width: 90%;
+  /* width: 80%; */
   font-size: 18px;
   margin-bottom: 50px;
 }
@@ -102,6 +108,7 @@
   width: 500px;
   margin-top: 50px;
   margin-bottom: 50px;
+  font-size: 18px;
 }
 
 @media screen and (max-width: 1264px) {
@@ -142,6 +149,10 @@
   .fellowship_title {
     font-size: 45px;
   }
+  
+  .fellowship_text_container {
+    width: 100%;
+  }
 
   .fellowship_vector {
     display: none;
@@ -171,4 +182,125 @@
   .perks_display_subcontainer {
     width: 300px;
   }
+}
+
+
+
+/* PHASES */
+
+.timeline {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  margin-top: 100px;
+}
+
+.timeline .info {
+  margin-bottom: 40px;
+}
+
+.phase {
+  width: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  border-radius: 18px;
+  padding: 10px;
+  -webkit-transition: ease-in-out filter 0.3s;
+  transition: ease-in-out filter 0.3s;
+}
+
+@media only screen and (max-width: 576px) {
+  .phase {
+    width: 320px;
+  }
+}
+
+.phase .phase-text {
+  -webkit-transition: ease-in-out transform 0.3s;
+  transition: ease-in-out transform 0.3s;
+}
+
+.phase .phase-icon {
+  -webkit-transition: ease-in-out transform 0.3s;
+  transition: ease-in-out transform 0.3s;
+}
+
+@media only screen and (min-width: 577px) {
+  .phase:hover .phase-text {
+    -webkit-transform: scale(104%) translateX(2%) translateY(2%);
+            transform: scale(104%) translateX(2%) translateY(2%);
+  }
+  .phase:hover .phase-icon {
+    -webkit-transform: scale(110%);
+            transform: scale(110%);
+  }
+}
+
+.phase h3 {
+  margin: 0;
+}
+
+.phase p {
+  margin: 0;
+}
+
+.phase-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.phase-icon {
+  margin-bottom: 15px;
+}
+
+.phase-icon img {
+  max-height: 25px;
+}
+
+.phase-arrow {
+  width: 30px;
+  max-width: 30px;
+  min-width: 30px;
+  opacity: 90%;
+}
+
+.phase-arrow img {
+  height: 150px;
+}
+
+.hidden-arrow {
+  opacity: 0;
+}
+
+.phase-text {
+  margin-left: 16px;
+}
+
+.phase-title {
+  margin-bottom: 0.1em;
+}
+
+.phase-date {
+  text-transform: uppercase;
+  color: #B8CFED;
+  margin-bottom: 0.8em;
+  font-size: 0.8em;
+}
+
+.phase-description p {
+  color: #DDE9F9;
 }
