--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -1,5 +1,11 @@
 .team_title {
   font-size: 40px;
   font-weight: 600;
-  padding-bottom: 10%;
+}
+
+.card_display_container {
+  margin-top: 40px;
+  gap: 3%;
+  display: flex;
+  flex-wrap: wrap;
 }
