seperated card information container and regular information container

--- a/src/components/shared/team/profileCard.css
+++ b/src/components/shared/team/profileCard.css
@@ -7,7 +7,7 @@
   margin-bottom: 3%;
 }
 
-.information_container {
+.card_information_container {
   text-align: center;
   display: inline-block;
   vertical-align: middle;
