--- a/src/components/shared/team/projects.css
+++ b/src/components/shared/team/projects.css
@@ -12,6 +12,10 @@
   font-style: italic;
 }
 
+.about_link {
+  padding-bottom: 0px;
+}
+
 .bio_text {
   padding-top: 2%;
   padding-bottom: 3.5%;
@@ -32,4 +36,18 @@
   padding: 3% 18.5%;
   background-color: #2c3951;
   gap: 5%;
+}
+
+.projects_container {
+  padding: 10% 18.5%;
+}
+
+.project_card_container {
+  background-color: #2c3951;
+  /* border-radius: 7%;
+  padding: 3% 7% 3% 5%; */
+  border-radius: 25px;
+  padding: 20px;
+  /* width: 200px; */
+  height: 150px;
 }
