--- a/src/components/shared/team/projects.css
+++ b/src/components/shared/team/projects.css
@@ -21,7 +21,7 @@
   padding-bottom: 3.5%;
 }
 
-.projects_container p {
+.project_container_title {
   font-size: 28px;
   font-weight: 600;
 }
@@ -44,10 +44,48 @@
 
 .project_card_container {
   background-color: #2c3951;
-  /* border-radius: 7%;
-  padding: 3% 7% 3% 5%; */
   border-radius: 25px;
-  padding: 20px;
-  /* width: 200px; */
+  padding: 2%;
   height: 150px;
+  display: flex;
+  gap: 10px;
+  margin-top: 4%;
+}
+
+.project_card_container * {
+  background-color: #2c3951;
+}
+
+.project_text_title {
+  font-size: 18px;
+}
+
+.project_text {
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-right: 2%;
+  color: #deeeff;
+}
+
+.project_image {
+  width: 225px;
+}
+
+.project_image_container {
+  width: 100%;
+}
+
+.project_card_container.unfinished {
+  background-color: #262936;
+}
+
+.project_card_container.unfinished * {
+  background-color: #262936;
+}
+
+.project_card_container.unfinished {
+  border-style: dashed;
+  border-color: #7a91c0;
 }
