fixed img prop drilling

--- a/src/components/shared/team/projects.css
+++ b/src/components/shared/team/projects.css
@@ -37,6 +37,7 @@
   padding: 3% 18.5%;
   background-color: #2c3951;
   gap: 5%;
+  width: 700px;
 }
 
 .projects_container {
@@ -52,7 +53,7 @@
   display: flex;
   gap: 10px;
   margin-top: 4%;
-  width: 750px;
+  width: 700px;
 }
 
 .project_card_container * {
@@ -79,6 +80,7 @@
 
 .project_image {
   width: 225px;
+  border-radius: 0.25rem;
 }
 
 .project_image_container {
