--- a/src/components/fellowship/projects/projects.css
+++ b/src/components/fellowship/projects/projects.css
@@ -1,15 +1,34 @@
-.project_container {
-  margin-left: 5%;
-  margin-right: 5%;
+* {
+  font-family: Inter, sans-serif;
 }
 
-.project_container img {
+.project_page {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 700px;
+}
+
+.project_container {
+  margin-bottom: 30px;
+}
+
+.project_container p {
+  color: #dde9f9;
+}
+
+.project_meta img {
   width: 100%;
   border-radius: 10px;
 }
 
 .project_container_info * {
   margin-top: 20px;
+}
+
+.project_container h1 {
+  font-size: 40px;
+  margin-bottom: 20px;
 }
 
 .project_container h2 {
@@ -27,4 +46,61 @@
 
 .project_container hr {
   margin-bottom: 25px;
+}
+
+.project_container img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.project_meta {
+  border-bottom: 3px solid white;
+  margin-bottom: 20px;
+}
+
+.project_meta_intro p {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.project_meta_card_container * {
+  background-color: #262936dd;
+}
+
+.project_meta_card_container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 1, 0, 0.7);
+  border-radius: 0.25rem;
+}
+
+.project_meta_card {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.project_meta_card img {
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+}
+
+.project_meta_card {
+  padding: 10px;
+}
+.meta_card_div p {
+  color: #262936;
+  margin-top: 5px;
+}
+.meta_card_div {
+  padding: 2px 16px;
+}
+.meta_title {
+  color: #262936dd;
+}
+.meta_name {
+  margin-bottom: 5px;
 }
