--- a/src/components/fellowship/projects/projects.css
+++ b/src/components/fellowship/projects/projects.css
@@ -73,6 +73,7 @@
   padding-bottom: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 1, 0, 0.7);
   border-radius: 0.25rem;
+  margin-top: 20px;
 }
 
 .project_meta_card {
