--- a/src/components/shared/team/projects.css
+++ b/src/components/shared/team/projects.css
@@ -33,16 +33,29 @@
 }
 
 .bio_container {
-  display: flex;
-  padding: 3% 18.5%;
+  width: 100%;
   background-color: #2c3951;
+}
+
+.bio_information_container {
+  display: flex;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #2c3951;
+  margin-left: auto;
+  margin-right: auto;
   gap: 5%;
   width: 700px;
 }
 
 .projects_container {
-  padding: 10% 18.5%;
+  /* padding: 10% 18.5%; */
   padding-top: 3%;
+  padding-bottom: 5%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 700px;
 }
 
 .project_card_container {
