--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,17 @@
   text-decoration: none;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .title {
   padding: 20px 0px 40px 0px;
   color: #fd2a36;
