--- a/src/components/fellowship/projects/projects.css
+++ b/src/components/fellowship/projects/projects.css
@@ -1,4 +1,4 @@
-* {
+.project_page * {
   font-family: Inter, sans-serif;
 }
 
@@ -27,6 +27,11 @@
   font-size: 18px;
 }
 
+.project_container em {
+  color: #dde9f9;
+  font-size: 18px;
+}
+
 .project_meta img {
   width: 100%;
   border-radius: 10px;
@@ -46,9 +51,14 @@
   margin-bottom: 20px;
 }
 
-.project_container p {
-  margin-top: 10px;
-  margin-bottom: 15px;
+.project_container h3 {
+  margin-top: 30px;
+  margin-bottom: 5px;
+}
+
+.project_page hr {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .project_container ul {
@@ -62,7 +72,15 @@
 .project_container img {
   width: 100%;
   border-radius: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.preview {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .project_meta {
