--- a/src/components/shared/team/projects.css
+++ b/src/components/shared/team/projects.css
@@ -45,28 +45,28 @@
   margin-left: auto;
   margin-right: auto;
   gap: 5%;
-  width: 700px;
+  max-width: 800px;
 }
 
 .projects_container {
-  /* padding: 10% 18.5%; */
   padding-top: 3%;
   padding-bottom: 5%;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 700px;
+  max-width: 800px;
 }
 
 .project_card_container {
   background-color: #2c3951;
-  border-radius: 25px;
-  padding: 2%;
+  border-radius: 15px;
+  /* padding: 2%; */
+  padding: 23px;
   min-height: 75px;
   display: flex;
   gap: 10px;
   margin-top: 4%;
-  width: 700px;
+  /* max-width: 700px; */
 }
 
 .project_card_container * {
@@ -92,8 +92,8 @@
 }
 
 .project_image {
-  width: 225px;
-  border-radius: 0.25rem;
+  max-width: 280px;
+  border-radius: 15px;
 }
 
 .project_image_container {
@@ -111,4 +111,21 @@
 .project_card_container.unfinished {
   border-style: dashed;
   border-color: #7a91c0;
+}
+.project_card_container.unfinished p {
+  line-height: 1.5em;
+}
+
+.project_card_container p {
+  line-height: 1.5em;
+}
+
+@media screen and (max-width: 630px) {
+  .project_card_container {
+    display: block;
+  }
+  .project_image {
+    width: 100%;
+    max-width: none;
+  }
 }
