--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -152,7 +152,9 @@
 
   .navbar_links.showMenu {
     width: 100%;
-    margin-right: auto;
+    margin-left: 0px;
+    margin-top: 80px;
+    padding: 40px 40px;
   }
 
   .burger {
