--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -155,6 +155,8 @@
     margin-left: 0px;
     margin-top: 80px;
     padding: 40px 40px;
+    overflow-y: hidden;
+    overflow-x: hidden;
   }
 
   .burger {
