--- a/src/components/fellowship/projects/projects.css
+++ b/src/components/fellowship/projects/projects.css
@@ -48,6 +48,8 @@
 .project_main_container h1 {
   font-size: 34px;
   line-height: 1.4em;
+  margin-top: 20px;
+  margin-bottom: 13px;
 }
 
 .project_main_container h2 {
