--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -157,6 +157,9 @@
     padding: 40px 40px;
     overflow-y: hidden;
     overflow-x: hidden;
+    position: fixed;
+    /* overflow: hidden;
+    touch-action: none; */
   }
 
   .burger {
