--- a/src/components/shared/team/projects.css
+++ b/src/components/shared/team/projects.css
@@ -117,7 +117,7 @@
 }
 
 .project_image_container {
-  width: 100%;
+  /* width: 100%; */
   /* display: flex;
   align-items: center; */
   /* object-fit: cover; */
