--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ body {
 .container {
   min-height: 40vh;
   padding: 40px 100px;
+  padding-right: 0px;
 }
 
 @media screen and (max-width: 1060px) {
