--- a/src/components/program/program.css
+++ b/src/components/program/program.css
@@ -1,4 +1,4 @@
-.program_container {
+/* .program_container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -88,4 +88,4 @@
   #resized_membership {
     display: flex;
   }
-}
+} */
